Version 0.7.2 -- Subversion
-----------------

* Fixed stupid encoding issue with cms_htmlentities

Version 0.7.1 -- Wed Oct 26 2004
-----------------

* Added check for session functions to install script (#000004)
* Added newline parsing to the comments module (#000011)
* Added encoding override on templates.  Fixed bugs with
htmlentities. (#000002, #000006)
* Added missing CSS to the horizontal menu (#000008)
* Added check to lang/addline.sh to make sure line doesn't already
exist (#000017)
* Added German translation (Piratos)
* Added Czech translation (peca)
* Added new div and swaptitledate parameter to News module
* Fixed a bug when hitting cancel on the login page (#000029)
* Fixed bug when not saving all fields when adding a user
* Fixed html blobs so that they can  handle smarty functions inside of them.
* Fixed email in add/edit user to accept 255 characters (#000003)
* Fixed htmlblob NOTICE level messages (#000005)
* Fixed delete confirmation text in file management (#000012)
* Fixed java syntax highlighting to submit if advnaced wasn't
expanded (#0000016)
* Removed most references to BBCode without breaking backwards
compatibility (#000013)
* Removed a rogue div from the Comments module (#000010)
* Fixed htmlarea displaying inproper align values (#0000021)
* Fixed css not properly displaying in htmlarea until post (#0000031)
* Fixed default language on login page to default to english. (#0000032)
* Changed the header slogan to be text instead of an image (#0000015)

Version 0.7 -- Mon Oct 11 2004
-----------------

* Added HTML blobs for easy administration of small chunks of html (Genie #3)
* Added Image Manager to the files section for advanced image handling
functions
* Added horizontal option to dhtmlmenu (leen)
* Added new admin style
* Added new install and upgrade look
* Added language as a user perference and also moved it to the login page
* Added java based syntax highlighting as a user preference